--- a/src/LagoVista.ISY994i.Sample.UWP/LagoVista.ISY994i.Sample.UWP.csproj
+++ b/src/LagoVista.ISY994i.Sample.UWP/LagoVista.ISY994i.Sample.UWP.csproj
@@ -147,22 +147,28 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LagoVista.Core">
-      <Version>0.8.169-alpha01144</Version>
+      <Version>1.2.29-alpha1859</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>0.8.169-alpha01144</Version>
+      <Version>1.2.29-alpha1859</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.UWP">
-      <Version>0.8.169-alpha1755</Version>
+      <Version>1.2.25-alpha1524</Version>
+    </PackageReference>
+    <PackageReference Include="LagoVista.IoT.Logging">
+      <Version>1.2.29-alpha1859</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UWP.UI">
-      <Version>0.8.169-alpha1755</Version>
+      <Version>1.2.25-alpha1524</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Azure.Mobile.Analytics">
+      <Version>0.12.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>5.3.3</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>10.0.2</Version>
+      <Version>10.0.3</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
