--- a/src/LagoVista.ISY994i.UI.UWP/LagoVista.ISY994i.UI.UWP.csproj
+++ b/src/LagoVista.ISY994i.UI.UWP/LagoVista.ISY994i.UI.UWP.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>LagoVista.ISY994i.UI.UWP</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.15063.0</TargetPlatformVersion>
+    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.14393.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.10586.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
@@ -124,20 +124,25 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ISYEventListener.cs" />
-    <EmbeddedResource Include="Properties\LagoVista.ISY994i.UI.UWP.rd.xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="LagoVista.Client.Core">
+      <Version>1.2.24-alpha1823</Version>
+    </PackageReference>
     <PackageReference Include="LagoVista.Core">
-      <Version>0.8.169-alpha01144</Version>
+      <Version>1.2.29-alpha1859</Version>
+    </PackageReference>
+    <PackageReference Include="LagoVista.Core.Authentication">
+      <Version>1.2.29-alpha1859</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>0.8.169-alpha01144</Version>
+      <Version>1.2.29-alpha1859</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.UWP">
-      <Version>0.8.169-alpha1755</Version>
+      <Version>1.2.25-alpha1524</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UWP.UI">
-      <Version>0.8.169-alpha1755</Version>
+      <Version>1.2.25-alpha1524</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>5.3.3</Version>
