--- a/src/LagoVista.ISY994i.Sample.UWP/LagoVista.ISY994i.Sample.UWP.csproj
+++ b/src/LagoVista.ISY994i.Sample.UWP/LagoVista.ISY994i.Sample.UWP.csproj
@@ -45,7 +45,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\ARM\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NETFX_CORE;WINDOWS_UWP;CODE_ANALYSIS;DISABLE_XAML_GENERATED_BREAK_ON_UNHANDLED_EXCEPTION</DefineConstants>
     <NoWarn>;2008</NoWarn>
     <DebugType>full</DebugType>
     <PlatformTarget>ARM</PlatformTarget>
@@ -147,22 +147,22 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LagoVista.Core">
-      <Version>1.2.29-alpha1859</Version>
+      <Version>1.2.35-alpha1836</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>1.2.29-alpha1859</Version>
+      <Version>1.2.35-alpha1836</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.UWP">
-      <Version>1.2.32-alpha0802</Version>
+      <Version>1.2.32-alpha1052</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Logging">
-      <Version>1.2.29-alpha1859</Version>
+      <Version>1.2.32-alpha1416</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UWP.UI">
-      <Version>1.2.32-alpha0802</Version>
+      <Version>1.2.32-alpha1052</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Azure.Mobile.Analytics">
-      <Version>0.12.0</Version>
+      <Version>0.13.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>5.3.3</Version>
@@ -179,6 +179,10 @@
     <ProjectReference Include="..\LagoVista.ISY994i.UI.UWP\LagoVista.ISY994i.UI.UWP.csproj">
       <Project>{c1f70ba1-d393-405d-b1ee-6b5c59c31fbc}</Project>
       <Name>LagoVista.ISY994i.UI.UWP</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LagoVista.SmartThings\LagoVista.SmartThings.csproj">
+      <Project>{09cea2b7-7f1d-4271-9b23-e60112e40206}</Project>
+      <Name>LagoVista.SmartThings</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
