--- a/src/LagoVista.ISY994i.UI.UWP/LagoVista.ISY994i.UI.UWP.csproj
+++ b/src/LagoVista.ISY994i.UI.UWP/LagoVista.ISY994i.UI.UWP.csproj
@@ -202,6 +202,9 @@
     <Content Include="Images\ToggleSwitch.png" />
     <Content Include="Images\Transmitting.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Package.nuspec" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
